Bug 53119 - [GM965 SNA] GPU Hung while watching video
Summary: [GM965 SNA] GPU Hung while watching video
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-04 09:27 UTC by Roman Jarosz
Modified: 2012-08-04 09:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg (57.11 KB, application/octet-stream)
2012-08-04 09:28 UTC, Roman Jarosz
no flags Details
i915 error state (105.69 KB, application/gzip)
2012-08-04 09:28 UTC, Roman Jarosz
no flags Details
X log (34.87 KB, text/plain)
2012-08-04 09:30 UTC, Roman Jarosz
no flags Details

Description Roman Jarosz 2012-08-04 09:27:50 UTC
Hi,

using latest git source 036b90f099af21e60fb4c3684616daf1927f705e i can easily reproduce a GPU hung while watching video in VLC using SNA acceleration (UXA is ok). Display goes black, audio still plays, keyboard works.

Steps to reproduce:
With SNA start video in VLC
Let it play on external display connected to VGA port. (maybe not important, will test)
After a while the screen goes black.

Using KDE without composition.

00:02.1 Display controller: Intel Corporation Mobile GM965/GL960 Integrated
Graphics Controller (rev 0c)
Linux kedge 3.5.0 #1 SMP Sat Aug 4 10:55:40 CEST 2012 x86_64 Intel(R) Core(TM)2 Duo CPU T8100 @ 2.10GHz GenuineIntel GNU/Linux
Comment 1 Roman Jarosz 2012-08-04 09:28:19 UTC
Created attachment 65113 [details]
dmesg
Comment 2 Roman Jarosz 2012-08-04 09:28:46 UTC
Created attachment 65114 [details]
i915 error state
Comment 3 Roman Jarosz 2012-08-04 09:30:03 UTC
Created attachment 65115 [details]
X log

I should have debug info in intel driver, but somehow it isn't in the log
Comment 4 Chris Wilson 2012-08-04 09:36:02 UTC
Thanks,

commit 61ec2999afd5dad22580e024421f13afe7c82f3a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Aug 4 10:33:05 2012 +0100

    sna/gen4: Restore w/a flush for video
    
    One flush removal too many, keep those fingers crossed that the others
    do not make an unwanted return.
    
    Reported-by: Roman Jarosz <kedgedev@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53119
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 Roman Jarosz 2012-08-04 09:46:54 UTC
Oh that was fast :) Thanks, will test


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.