sna/gen4: Restore w/a flush for video

One flush removal too many, keep those fingers crossed that the others
do not make an unwanted return.

Reported-by: Roman Jarosz <kedgedev@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53119
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>